# ThreatTrace

./: LICENSE  README.md  config.yaml  ioc_results_20260331_124416.txt  main.py  pyproject.toml  requirements.txt
analysis/: README.md  opencode_log_analyzer.py  opencode_log_analyzer_baseline.py
analytics/: baseline.py  beaconing.py  frequency.py  metrics.py  orchestrator.py  timeline.py  topn.py
core/: auto_detector.py  file_handler.py  menu.py  models.py  parser_router.py  report_builder.py  report_builder_enhanced.py
data/: event_templates.json
def refang(text: str) -> str:/: ThreatTrace_report_20260331_183228.html
detection/: __init__.py  correlator.py  engine.py  engine_enhanced.py  event_matrix.py  sigma_scanner.py  yara_scanner.py
docs/: README.md  THREATTRACE_DOCUMENTATION.txt  generate_pdf.py
extractor/: __init__.py  context_discoverer.py  engine.py  exporters.py  line_indexer.py  patterns.py
parsers/: __init__.py  ad_parser.py  apache_parser.py  aws_cloudtrail_parser.py  azure_activity_parser.py  dns_parser.py  docker_parser.py  email_parser.py  firewall_parser.py  gcp_audit_parser.py  iis_parser.py  k8s_parser.py  linux_audit_parser.py  linux_auth_parser.py  linux_syslog_parser.py  mssql_parser.py  mysql_parser.py  nginx_parser.py  okta_parser.py  squid_proxy_parser.py  ssh_parser.py  sysmon_parser.py  vpn_parser.py  windows_evtx_parser.py
scripts/: ingest_privesc_samples.py
search/: __init__.py  boolean_eval.py  event_name_detector.py  event_search.py  keyword_search.py
tests/: test_boolean_eval.py  test_privesc_detections.py  (+1 more)
(+147 files in other folders)
